@@ -48,17 +48,17 @@ To copy use the copy-operator:
 
 
 
+= Rio - Ruby I/O Facilitator
 
+fa-cil-i-tate:  To make easy or easier [http://www.thefreedictionary.com/facilitate]
 
 == Overview
 
-Rio is a Ruby I/O convenience class wrapping much of the functionality
-of IO, File and Dir. Rio also uses FileUtils, Tempfile, StringIO,
-OpenURI, Net::FTP, Zlib, and CSV to provide similar functionality
-using a simple consistent interface. In addition to forwarding the
-interfaces provided by IO, File, and Dir to an appropriate object, Rio
-provides a "grande" interface that allows many common application
-level I/O and file-system tasks to be expressed succinctly.
+Rio is a facade for most of the standard ruby classes that deal with I/O;
+providing a simple, intuitive, succinct interface to the functionality
+provided by IO, File, Dir, Pathname, FileUtils, Tempfile, StringIO, OpenURI
+and others. Rio also provides an application level interface which allows many
+common I/O idioms to be expressed succinctly.
 
 == New
 
